# ImgSmartResize

./: ReadMe.txt
ImageProcessing/: CMakeLists.txt  ReadMe.txt
ImageProcessing/include/ImageProcessing/containers/: ImageRGB.h  Seam.h
ImageProcessing/include/ImageProcessing/smartResize/: EnergyCalculator.h  ImageCalculator.h  SeamCarver.h
ImageProcessing/src/containers/: ImageGray.cpp  ImageRGB.cpp
ImageProcessing/src/smartResize/: EnergyCalculator.cpp  ImageCalculator.cpp  SeamCarver.cpp
ImgSmartResizeShowcase/: CMakeLists.txt  ReadMe.txt
ImgSmartResizeShowcase/include/: Constants.h  ImageHelper.h  InputParser.h
ImgSmartResizeShowcase/include/ImageProcessing/containers/: ImageGray.h  ImageRGB.h  Seam.h
ImgSmartResizeShowcase/include/ImageProcessing/smartResize/: EnergyCalculator.h  SeamCarver.h
ImgSmartResizeShowcase/src/: Constants.cpp  ImageHelper.cpp  InputParser.cpp  main.cpp
lodepng/: CMakeLists.txt  ReadMe.txt
